--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,5 +74,21 @@ swiftmailer:
 assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
+    assets:
+      glyphicons-halflings-regular-eot:
+        inputs: '@CommonBundle/Resources/public/fonts/glyphicons-halflings-regular.eot'
+        output: 'fonts/glyphicons-halflings-regular.eot'
+      glyphicons-halflings-regular-svg:
+        inputs: '@CommonBundle/Resources/public/fonts/glyphicons-halflings-regular.svg'
+        output: 'fonts/glyphicons-halflings-regular.svg'
+      glyphicons-halflings-regular-ttf:
+        inputs: '@CommonBundle/Resources/public/fonts/glyphicons-halflings-regular.ttf'
+        output: 'fonts/glyphicons-halflings-regular.ttf'
+      glyphicons-halflings-regular-woff:
+        inputs: '@CommonBundle/Resources/public/fonts/glyphicons-halflings-regular.woff'
+        output: 'fonts/glyphicons-halflings-regular.woff'
+      glyphicons-halflings-regular-woff2:
+        inputs: '@CommonBundle/Resources/public/fonts/glyphicons-halflings-regular.woff2'
+        output: 'fonts/glyphicons-halflings-regular.woff2'
     filters:
-        cssrewrite: ~
+      cssrewrite: ~
