--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,3 +11,6 @@ admin:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
