Temporary remove access_control

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,5 +30,5 @@ security:
 
     access_control:
         # require ROLE_ADMIN for /admin*
-        - { path: ^/admin/user/*, roles: ROLE_SUPER_ADMIN }
-        - { path: ^/admin, roles: [ROLE_ADMIN, ROLE_SUPER_ADMIN] }
+        #- { path: ^/admin/user/*, roles: ROLE_SUPER_ADMIN }
+        #- { path: ^/admin, roles: [ROLE_ADMIN, ROLE_SUPER_ADMIN] }
