Working on the borrowing form

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,3 +16,7 @@ services:
     app.copygenerator:
       class: AdminBundle\Services\CopyGeneratorService
       arguments: ['@doctrine', gameid, nbcopy]
+
+    app.copiesgetter:
+      class: AdminBundle\Services\CopiesGetterService
+      arguments: ['@doctrine']
