--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "symfony/assetic-bundle": "^2.8",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "stfalcon/tinymce-bundle": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
