--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "symfony/assetic-bundle": "^2.8",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "stfalcon/tinymce-bundle": "^2.1"
+        "stfalcon/tinymce-bundle": "^2.1",
+        "knplabs/knp-snappy-bundle": "~1.4"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
